Fixes spacing on blog page

--- a/app/_scss/pages/_base.scss
+++ b/app/_scss/pages/_base.scss
@@ -3,7 +3,7 @@
 		width: 63%;
 		background-color: rgba(51, 51, 51, 0.08);
 		font-weight: 300;
-		padding: 4% 8% 6% 8%;
+		padding: 4% 5% 6% 6%;
 
 		h1 {
 			margin: 0.8em 0 0.5em 0;
@@ -54,8 +54,12 @@
 }
 
 @media (max-width: 1299px) {
-	.content main .cta a {
-		font-size: 1.6em;
+	.content main {
+		padding: 4% 8% 6% 8%;
+
+		.cta a {
+			font-size: 1.6em;
+		}
 	}
 }
 
