--- a/app/_scss/pages/_blog.scss
+++ b/app/_scss/pages/_blog.scss
@@ -10,6 +10,7 @@
 			header {
 				.widgets {
 					position: absolute; right: 84%;
+					margin-top: 1.18em;
 
 					ul.social {
 						list-style-type: none;
@@ -108,6 +109,7 @@
 					.widgets {
 						position: absolute; left: 0; right: inherit;
 						text-align: left;
+						margin-top: 0;
 
 						ul.social {
 							text-align: left;
